Fix hero dark overlay size on mobile screens

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -184,6 +184,7 @@ img {
 .hero-section:before {
     /* background-color: rgba(0, 173, 239, 0.3); */
     background-color: rgba(0, 0, 0, 0.6);
+    height: 100vh;
     content: "";
     position: absolute;
     top: 0;
